# materialize

./: Cargo.toml
src/ore/: Cargo.toml
src/ore/src/: lib.rs  proptest.rs
src/persist/: Cargo.toml
src/persist-client/: Cargo.toml
src/persist-client/benches/: benches.rs  plumbing.rs
src/persist-client/src/: critical.rs  internals_bench.rs  read.rs  write.rs
src/persist-client/src/internal/: encoding.rs  paths.rs  state.rs  state_diff.rs
src/persist/src/: location.rs
src/sql/src/session/: vars.rs
src/sqllogictest/: Cargo.toml
src/sqllogictest/src/: ast.rs  runner.rs
src/stash/: Cargo.toml
src/stash-derive/: Cargo.toml
src/stash-derive/src/: lib.rs  snapshot.rs
src/stash-derive/stash_snapshots/roleattributes/: v0.snap  v1.snap  v2.snap  v3.snap  v4.snap
src/stash-derive/stash_snapshots/roles/: v3.snap  v4.snap
src/stash-version/: Cargo.toml
src/stash-version/src/: lib.rs
