[package]
name = "mz-stash-derive"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
mz-stash-version = { path = "../stash-version" }
prettyplease = "0.2"
proc-macro2 = "1.0.47"
quote = "1.0.23"
serde = "1"
syn = { version = "2", features = ["extra-traits", "full"] }
workspace-hack = { version = "0.0.0", path = "../workspace-hack" }

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]
